# The_Resolved_Chord

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONSISTENCY_REVIEW_2026-02-16.md  CONTRIBUTING.md  DISCOVERY_TIMELINE.md  DOCUMENTATION_CHECK.md  Dockerfile  GETTING_STARTED.md  Makefile  PUBLICATION_INDEX.md  README.md  RUN_EVERYTHING.bat  SPECTRAL_MAP.md  TROUBLESHOOTING.md  The_Resolved_Chord.ipynb  check_sync.py  config.py  convert_tex_pdf_md.py  docker-compose.yml  find_pandoc.bat  install_pandoc_download.bat  install_pandoc_simple.bat  leng_test_utils.py  pandoc_utils.py  pyproject.toml  pytest.ini  requirements.txt  run_falsification.bat  run_falsification.py  run_verification.bat  run_verification.py  test_pandoc_install.bat  test_self_containment.py
falsification/: __init__.py  conftest.py  test_eta.py  test_falsification.py  test_geometry.py  test_ghost_modes.py  test_negative_controls.py  test_neutrinos.py  test_paper_claims.py  test_permutation_scramble.py  test_precision.py  test_proton.py  test_replication.py  test_scalar_95.py  test_universe_landscape.py  test_verification_scripts.py
figures/: README.md  bare_orbifold.py  equations_derivation.py  five_invariants.py  lepton_simplex.py  lotus_emblem.py  lotus_potential.py  prediction_scatter.py  roadmap_figure.py  spectral_cascade.py
lotus/: __init__.py  __main__.py  book.py  checks.py  cli.py  constants.py  cosmology.py  dynamics.py  equations.py  falsify.py  gravity.py  landscape.py  nuclear.py  pdg_2024_reference.py  spacetime.py
math-papers/: APS_Three_Generations.tex  Eta_Ghost_Identity.md  Eta_Ghost_Identity.tex  N1_Bridge_Theorem.tex  Spectral_Exclusion.tex
paper/: The_Resolved_Chord_v10.md  The_Resolved_Chord_v10.tex  The_Resolved_Chord_v9.tex
papers/: README.md  Supplement_III_GaugeConfinement.tex  Supplement_II_LeptonSector.tex  Supplement_IV_BaryonSector.tex  Supplement_IX_StrangeCastles.tex  Supplement_I_Geometry.tex  Supplement_VIII_AdversarialDefense.tex  Supplement_VII_NeutrinoSector.tex  Supplement_VI_QuarkFlavor.tex  Supplement_V_HiggsSector.tex  Supplement_XIII_PerfectLotus.tex  Supplement_XII_CompanionGuide.tex  Supplement_XIV_WhyFMA.tex  Supplement_XI_DerivationStatus.tex  Supplement_X_SpectralAction.tex  The_Resolved_Chord_v11.tex  The_Resolved_Chord_v12.tex
supplements/: Supplement_III_GaugeConfinement.md  Supplement_III_GaugeConfinement.tex  (+21 more)
(+192 files in other folders)
